@@ -13,14 +13,13 @@
 package org.eclipse.ditto.services.models.connectivity;
 
 import java.text.MessageFormat;
-import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
-import java.util.Optional;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
+import javax.annotation.Nullable;
 import javax.annotation.concurrent.Immutable;
 
 import org.eclipse.ditto.json.JsonArray;
@@ -28,7 +27,6 @@ import org.eclipse.ditto.json.JsonCollectors;
 import org.eclipse.ditto.json.JsonFactory;
 import org.eclipse.ditto.json.JsonField;
 import org.eclipse.ditto.json.JsonObject;
-import org.eclipse.ditto.json.JsonObjectBuilder;
 import org.eclipse.ditto.json.JsonValue;
 import org.eclipse.ditto.model.base.headers.DittoHeaders;
 import org.eclipse.ditto.model.base.json.JsonSchemaVersion;
@@ -53,17 +51,17 @@ final class UnmappedOutboundSignal implements OutboundSignal {
     private final Signal<?> source;
     private final List<Target> targets;
 
-    UnmappedOutboundSignal(final Signal<?> source, final List<Target> targets) {
+    UnmappedOutboundSignal(final Signal<?> source, final Collection<Target> targets) {
         this.source = source;
-        this.targets = Collections.unmodifiableList(new ArrayList<>(targets));
+        this.targets = List.copyOf(targets);
     }
 
     /**
      * Creates a new {@code OutboundSignal} object from the specified JSON object.
      *
      * @param jsonObject a JSON object which provides the data for the OutboundSignal to be created.
-     * @param mappingStrategies the {@link org.eclipse.ditto.services.utils.cluster.MappingStrategies} to use in order
-     * to parse the in the JSON included {@code source} Signal.
+     * @param mappingStrategies the mapping strategies to use in order to parse the in the JSON included {@code source}
+     * Signal.
      * @return a new OutboundSignal which is initialised with the extracted data from {@code jsonObject}.
      * @throws NullPointerException if any argument is {@code null}.
      * @throws org.eclipse.ditto.json.JsonParseException if {@code jsonObject} is not an appropriate JSON object.
@@ -71,20 +69,19 @@ final class UnmappedOutboundSignal implements OutboundSignal {
     public static OutboundSignal fromJson(final JsonObject jsonObject, final MappingStrategies mappingStrategies) {
         final JsonObject readSourceObj = jsonObject.getValueOrThrow(JsonFields.SOURCE);
         final String commandType = readSourceObj.getValueOrThrow(Command.JsonFields.TYPE);
-        final Optional<MappingStrategy> mappingStrategy = mappingStrategies.getMappingStrategyFor(commandType);
 
-        if (!mappingStrategy.isPresent()) {
-            final String msgPattern = "There is no mapping strategy available for the signal of type <{0}>!";
-            final String message = MessageFormat.format(msgPattern, commandType);
-            LOGGER.error(message);
-            throw new IllegalStateException(message);
-        }
-
+        final MappingStrategy mappingStrategy = mappingStrategies.getMappingStrategy(commandType)
+                .orElseThrow(() -> {
+                    final String msgPattern = "There is no mapping strategy available for the signal of type <{0}>!";
+                    final String message = MessageFormat.format(msgPattern, commandType);
+                    LOGGER.error(message);
+                    return new IllegalStateException(message);
+                });
         final DittoHeaders dittoHeaders = jsonObject.getValue(JsonFields.JSON_DITTO_HEADERS)
                 .map(DittoHeaders::newBuilder)
                 .orElseGet(DittoHeaders::newBuilder)
                 .build();
-        final Jsonifiable signalJsonifiable = mappingStrategy.get().map(readSourceObj, dittoHeaders);
+        final Jsonifiable<?> signalJsonifiable = mappingStrategy.map(readSourceObj, dittoHeaders);
 
         final JsonArray readTargetsArr = jsonObject.getValueOrThrow(JsonFields.TARGETS);
         final List<Target> targets = readTargetsArr.stream()
@@ -109,19 +106,17 @@ final class UnmappedOutboundSignal implements OutboundSignal {
     @Override
     public JsonObject toJson(final JsonSchemaVersion schemaVersion, final Predicate<JsonField> thePredicate) {
         final Predicate<JsonField> predicate = schemaVersion.and(thePredicate);
-        final JsonObjectBuilder jsonObjectBuilder = JsonFactory.newObjectBuilder();
-
-        jsonObjectBuilder.set(JsonFields.SOURCE, source.toJson(schemaVersion, thePredicate), predicate);
-        jsonObjectBuilder.set(JsonFields.TARGETS, targets.stream()
-                .map(t -> t.toJson(schemaVersion, thePredicate))
-                .collect(JsonCollectors.valuesToArray()), predicate);
-        jsonObjectBuilder.set(JsonFields.JSON_DITTO_HEADERS, source.getDittoHeaders().toJson());
-
-        return jsonObjectBuilder.build();
+        return JsonFactory.newObjectBuilder()
+                .set(JsonFields.SOURCE, source.toJson(schemaVersion, thePredicate), predicate)
+                .set(JsonFields.TARGETS, targets.stream()
+                        .map(t -> t.toJson(schemaVersion, thePredicate))
+                        .collect(JsonCollectors.valuesToArray()), predicate)
+                .set(JsonFields.JSON_DITTO_HEADERS, source.getDittoHeaders().toJson())
+                .build();
     }
 
     @Override
-    public boolean equals(final Object o) {
+    public boolean equals(@Nullable final Object o) {
         if (this == o) {
             return true;
         }
@@ -129,15 +124,13 @@ final class UnmappedOutboundSignal implements OutboundSignal {
             return false;
         }
         final UnmappedOutboundSignal that = (UnmappedOutboundSignal) o;
-        return Objects.equals(source, that.source) &&
-                Objects.equals(targets, that.targets);
+        return Objects.equals(source, that.source) && Objects.equals(targets, that.targets);
     }
 
     @Override
     public int hashCode() {
         return Objects.hash(source, targets);
     }
-
 
     @Override
     public String toString() {
@@ -146,4 +139,5 @@ final class UnmappedOutboundSignal implements OutboundSignal {
                 ", targets=" + targets +
                 "]";
     }
+
 }
